// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`update-polyfill.schematic should modify polyfills.ts and test.ts: polyfills.ts 1`] = `
"/***************************************************************************************************
* Zone JS is required by default for Angular itself.
*/
import 'zone.js';  // Included with Angular CLI.


/***************************************************************************************************
* APPLICATION IMPORTS
*/

"
`;

exports[`update-polyfill.schematic should modify polyfills.ts and test.ts: test.ts 1`] = `
"// This file is required by karma.conf.js and loads recursively all the .spec and framework files

import 'zone.js/testing';
import { getTestBed } from '@angular/core/testing';
import {
BrowserDynamicTestingModule,
platformBrowserDynamicTesting
} from '@angular/platform-browser-dynamic/testing';

declare const require: {
context(path: string, deep?: boolean, filter?: RegExp): {
keys(): string[];
<T>(id: string): T;
};
};

// First, initialize the Angular testing environment.
getTestBed().initTestEnvironment(
BrowserDynamicTestingModule,
platformBrowserDynamicTesting(),
{ teardown: { destroyAfterEach: true }},
);

// Then we find all the tests.
const context = require.context('./', true, /\\\\.spec\\\\.ts$/);
// And load the modules.
context.keys().map(context);"
`;

exports[`update-polyfill.schematic should only add polyfills configuration if our polyfill is found in polyfills.ts/test.ts: polyfills.ts 1`] = `"import 'zone.js';"`;

exports[`update-polyfill.schematic should only add polyfills configuration if our polyfill is found in polyfills.ts/test.ts: test.ts 1`] = `
"import 'zone.js/testing';
import { getTestBed } from '@angular/core/testing';
import {
BrowserDynamicTestingModule,
platformBrowserDynamicTesting
} from '@angular/platform-browser-dynamic/testing';

// First, initialize the Angular testing environment.
getTestBed().initTestEnvironment(
BrowserDynamicTestingModule,
platformBrowserDynamicTesting(),
{ teardown: { destroyAfterEach: true }},
);"
`;
